--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
+
+    <!--Email JS-->
+    <script src="script.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("QEK-m4E_wzgDwcPXn");
+        })();
+    </script>
 </head>
 <body>
     <!-- Navbar -->
@@ -139,7 +150,7 @@
                 <div class="project-overlay project-image">
                     <p>Landing Page</p>
                 </div>
-                </div>
+                </a>
         </div>
     </section>
 
@@ -162,10 +173,10 @@
                     <h4>Let's Get In Touch</h4>
                     <form type="form">
                         <p type="Name:">
-                        <input placeholder="Write your name.."></p>
-                        <p type="Email:"><input placeholder="Let us know how to contact you back.."></p>
-                        <p type="Message:"><input placeholder="What would you like to tell us.."></p>
-                        <button>Send Message</button>
+                        <input type="text" id="name" placeholder="Write your name.."></p>
+                        <p type="Email:"><input type="text" id="email" placeholder="Let us know how to contact you back.."></p>
+                        <p type="Message:"><input id="message" placeholder="What would you like to tell us.."></p>
+                        <button onclick="sendMail()">Send Message</button>
                     </form>
                 </div>
             </div>
