--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
 
     <!--Email JS-->
-    <script src="script.js"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
@@ -24,6 +23,21 @@
         (function(){
             emailjs.init("QEK-m4E_wzgDwcPXn");
         })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                // these IDs from the previous steps
+                emailjs.sendForm('service_kr9isak', 'template_kd0bmex', '#contact-form')
+                .then(function(response) {
+                    console.log('SUCCESS!', response.status, response.text);
+                }, function(error) {
+                    console.log('FAILED...', error);
+                });
+            });
+        }
     </script>
 </head>
 <body>
@@ -68,7 +82,7 @@
                 <h1><span>Hello_</h1></span>
                 <h2>I'm Silvia Nanda Syafa Iswahyudi</h2>
                 <p>Front End Developer</p>
-            <a href="#" class="cta">
+            <a href="img/cv-silvia.pdf" class="cta">
                 <span>READ MY CV</span>
                 <svg width="13px" height="10px" viewBox="0 0 13 10"><path d="M1,5 L11,5"></path>
                 <polyline points="8 1 12 5 8 9"></polyline></svg></a>
@@ -171,12 +185,14 @@
                 </div>
                 <div class="col-md-6">
                     <h4>Let's Get In Touch</h4>
-                    <form type="form">
-                        <p type="Name:">
-                        <input type="text" id="name" placeholder="Write your name.."></p>
-                        <p type="Email:"><input type="text" id="email" placeholder="Let us know how to contact you back.."></p>
-                        <p type="Message:"><input id="message" placeholder="What would you like to tell us.."></p>
-                        <button onclick="sendMail()">Send Message</button>
+                    <form id="contact-form">
+                        <label>Name</label>
+                        <input type="text" name="user_name">
+                        <label>Email</label>
+                        <input type="email" name="user_email">
+                        <label>Message</label>
+                        <input name="message">
+                        <button type="submit" value="Send">Send</button>
                     </form>
                 </div>
             </div>
