--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 // these IDs from the previous steps
                 emailjs.sendForm('service_kr9isak', 'template_kd0bmex', '#contact-form')
                 .then(function(response) {
-                    console.log('SUCCESS!', response.status, response.text);
+                    alert('SUCCESS!', response.status, response.text);
                 }, function(error) {
                     console.log('FAILED...', error);
                 });
@@ -164,6 +164,13 @@
                 <div class="project-overlay project-image">
                     <p>Landing Page</p>
                 </div>
+                </a>
+
+                <a href="https://github.com/wdp-08/final-project-4-group4/tree/main" target="blank" class="project-card">
+                    <img src="img/screenshot (8).png" alt="tba" class="project-image">
+                    <div class="project-overlay project-image">
+                        <p>Memory Digital Game</p>
+                    </div>
                 </a>
         </div>
     </section>
